Added validation for Star Wars character
